--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="./css/common.css">
-<title>Javascript Sample</title>
+<title>SH Project</title>
 </head>
 <body>
 
